--- a/themes/pulsar/layouts/partials/head.html
+++ b/themes/pulsar/layouts/partials/head.html
@@ -3,7 +3,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>{{ .Site.Title }} | {{ .Site.Author.name }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="{{ "favicon.ico" | absURL }}" type="image/x-icon">
     {{/* Bootstrap */}}
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
         crossorigin="anonymous">
@@ -15,6 +15,6 @@
     {{/* Minified CSS */}}
     <link rel="stylesheet" type="text/css" media="screen" href="{{"css/main.minified.css" | relURL}}" />
     {{/* Google Font & Fonts */}}
-    <link href="https://fonts.googleapis.com/css?family=Rubik|Biryani" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Exo|Rubik" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/tonsky/FiraCode@1.206/distr/fira_code.css">
 </head>
