--- a/themes/pulsar/layouts/contact/list.html
+++ b/themes/pulsar/layouts/contact/list.html
@@ -6,9 +6,9 @@
 
             <p>Pour toute demande ou information supplémentaire, vous pouvez me contacter via ce formulaire.</p>
 
-            <p>Vous pouvez également me rejoindre sur les réseaux sociaux.</p>
+            <p>Vous pouvez également me rejoindre sur les réseaux sociaux, ci-dessous :</p>
 
-            <nav class="nav justify-content-start">
+            <nav class="nav justify-content-center">
                 {{ range .Site.Menus.social }}
                 <a class="nav-link" href="{{ .URL }}">{{ .Pre }}</a>
                 {{ end }}
