--- a/themes/pulsar/layouts/partials/scripts.html
+++ b/themes/pulsar/layouts/partials/scripts.html
@@ -6,7 +6,7 @@
     crossorigin="anonymous"></script>
 
 {{ if .IsHome }}
-<script src="https://unpkg.com/scrollreveal"></script>
+<!-- <script src="https://unpkg.com/scrollreveal"></script>
 <script>
     // Scroll Reveal
     ScrollReveal({
@@ -14,7 +14,7 @@
     }).reveal('section-career', {
         delay: 500
     });
-</script>
+</script> -->
 <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.9"></script>
 <script>
     // Typed JS
