--- a/themes/pulsar/layouts/contact/list.html
+++ b/themes/pulsar/layouts/contact/list.html
@@ -20,7 +20,7 @@
         <div class="container">
             <h3 class="section-title-outline">Contact_Form <div class="cursor blink"></div>
             </h3>
-            <p>Pour me contacter, veuillez remplir les champs si-dessous.</p>
+            <p>Pour me contacter, veuillez remplir les champs ci-dessous.</p>
             <form name="contact" method="POST" data-netlify="true" class="needs-validation" novalidate>
                 <div class="row">
                     <div class="col-md-6">
