--- a/themes/pulsar/src/sass/partials/_base.scss
+++ b/themes/pulsar/src/sass/partials/_base.scss
@@ -7,7 +7,7 @@ body {
     flex-direction: column;
     min-height: 100vh;
     margin: 0;
-    font-family: 'Rubik', sans-serif;
+    font-family: 'Ubuntu', sans-serif;
     background-color: $background;
 }
 
