--- a/themes/pulsar/src/sass/partials/_buttons.scss
+++ b/themes/pulsar/src/sass/partials/_buttons.scss
@@ -1,3 +1,8 @@
+button:focus {
+    outline: none;
+    outline: none;
+}
+
 .btn {
     border-radius: inherit !important;
     text-transform: uppercase;
