--- a/themes/pulsar/src/sass/partials/_card.scss
+++ b/themes/pulsar/src/sass/partials/_card.scss
@@ -9,10 +9,15 @@
         color: $white;
     }
 }
-
+.card-img-top {
+    width: 100%;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+}
 .card:hover {
     transform: scale(1.05);
     background-color: $background-dark;
+    border: 1px solid rgba($color: $primary, $alpha: 1);    
 }
 
 
