--- a/themes/pulsar/src/sass/partials/_hero.scss
+++ b/themes/pulsar/src/sass/partials/_hero.scss
@@ -16,17 +16,21 @@
 }
 
 .hero-title {
+    // -webkit-text-stroke-width: 1px;
+    // -webkit-text-stroke-color: $black;
+    // -webkit-text-fill-color: white;
+    font-family: 'Rubik';
     font-size: 30pt;
     font-weight: bolder;
-    width: 100%;
     text-transform: uppercase;
+    width: 100%;
     background-color: $white;
     color: $night;
     padding: 0.5rem 1rem;
 
     strong {
-        font-size: 20pt;
-        opacity: 0.8;
+        color: $primary;
+        -webkit-text-stroke-color: $primary;
     }
 }
 
@@ -60,9 +64,14 @@
     background-color: $black;
     border: 1px solid rgba($white, 0.2);
     font-size: 10pt;
-    font-family: 'Fira Code';
+    font-family: 'Ubuntu Mono';
+    font-weight: 500;
     height: 100%;
+    transition: 0.3s;
+}
 
+.hero-console:hover {
+    border: 1px solid rgba($primary, 1);
 }
 
 .hero-console-header {
@@ -124,17 +133,20 @@
 }
 
 @media screen and (max-width: 1024px) {
-    
+
     .hero {
         padding: 2rem 0rem;
     }
-    .hero-wrapper{
+
+    .hero-wrapper {
         min-height: 0rem;
         margin-bottom: 6rem;
     }
+
     .hero-footer {
         display: none;
     }
+
     .hero-title {
         font-size: 20pt;
         font-weight: bolder;
