--- a/themes/pulsar/layouts/contact/list.html
+++ b/themes/pulsar/layouts/contact/list.html
@@ -18,9 +18,15 @@
     </div>
     <div class="half-right">
         <div class="container">
-            <h3 class="section-title-outline">Contact_Form <div class="cursor blink"></div>
-            </h3>
-            <p>Pour me contacter, veuillez remplir les champs ci-dessous.</p>
+            <div class="row">
+                <div class="col-lg-6">
+                    <h3 class="section-title-outline">Contact<strong>_</strong>Form</h3>
+                    <p class="section-subtitle">Pour me contacter, veuillez remplir les champs ci-dessous.</p>
+                </div>
+                <div class="col-lg-6">
+                    {{/*  Empty Column  */}}
+                </div>
+            </div>
             <form name="contact" method="POST" data-netlify="true" class="needs-validation" novalidate>
                 <div class="row">
                     <div class="col-md-6">
