--- a/themes/pulsar/layouts/index.html
+++ b/themes/pulsar/layouts/index.html
@@ -1,6 +1,8 @@
 {{ define "main" }}
+{{ partial "summary" . }}
 {{ partial "hero" . }}
 {{ partial "skills" . }}
 {{ partial "career" . }}
 {{ partial "projects" . }}
+{{ partial "resume" . }}
 {{ end }}
