--- a/themes/pulsar/layouts/partials/career.html
+++ b/themes/pulsar/layouts/partials/career.html
@@ -3,8 +3,7 @@
         <div class="row">
             <div class="col-lg-6">
                 <div class="section-header">
-                    <h3 class="section-title">// Formations & Parcours<div class="cursor"></div>
-                    </h3>
+                    <h3 class="section-title">// Formations<strong>_</strong>Expériences</h3>
                     <p class="section-subtitle-light">Vous trouverez mes compétences ci dessous</p>
                 </div>
             </div>
