--- a/themes/pulsar/layouts/partials/projects.html
+++ b/themes/pulsar/layouts/partials/projects.html
@@ -7,7 +7,7 @@
       {{ with .Site.Params.section_skills}}
       <div class="col-lg-6">
         <div class="section-header text-right">
-          <h3 class="section-title-outline">Mes_Projets<div class="cursor blink"></div>
+            <h3 class="section-title-outline">Mes<strong>_</strong>Projets //</h3>
           </h3>
           <p class="section-subtitle">{{ .subtitle }}</p>
         </div>
