--- a/themes/pulsar/layouts/partials/head.html
+++ b/themes/pulsar/layouts/partials/head.html
@@ -15,6 +15,6 @@
     {{/* Minified CSS */}}
     <link rel="stylesheet" type="text/css" media="screen" href="{{"css/main.minified.css" | relURL}}" />
     {{/* Google Font & Fonts */}}
-    <link href="https://fonts.googleapis.com/css?family=Rubik|Ubuntu|Ubuntu+Mono" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Teko|Ubuntu|Ubuntu+Mono" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/tonsky/FiraCode@1.206/distr/fira_code.css">
 </head>
