--- a/themes/pulsar/layouts/partials/header.html
+++ b/themes/pulsar/layouts/partials/header.html
@@ -1,4 +1,4 @@
-<header>
+<header {{ if .IsHome }}class="colored"{{ end}}>
   <div class="container">
     <nav class="navbar navbar-expand-lg navbar-dark">
     <a class="navbar-brand" href="{{ "http://olivierchemla.xyz/" | relURL }}">{{ .Site.Title }}</a>
