--- a/themes/pulsar/layouts/partials/hero.html
+++ b/themes/pulsar/layouts/partials/hero.html
@@ -5,7 +5,7 @@
                 {{ with .Site.Params.hero }}
                 <div class="hero-wrapper">
                     <div class="divider"></div>
-                    <h1 class="hero-title"><strong>//</strong>Olivier<strong>_</strong>Chemla<strong>"</strong></h1>
+                    <h1 class="hero-title">> Olivier<strong>_</strong>Chemla</h1>
                     <h3 class="hero-subtitle"> { Front-End Developper & Designer }</h3>
                     <div class="hero-footer text-right">
                         <a href="#section-skills" class="btn btn-outline-light">Découvrir <i class="fas fa-arrow-alt-circle-down ml-2"></i></a>
