--- a/themes/pulsar/layouts/partials/skills.html
+++ b/themes/pulsar/layouts/partials/skills.html
@@ -7,8 +7,7 @@
             {{ with .Site.Params.section_skills}}
             <div class="col-lg-6">
                 <div class="section-header text-right">
-                    <h3 class="section-title-outline">{{ .title }}<div class="cursor blink"></div>
-                    </h3>
+                    <h3 class="section-title-outline">Mes<strong>_</strong>Benchmarks //</h3>
                     <p class="section-subtitle">{{ .subtitle }}</p>
                 </div>
             </div>
