--- a/themes/pulsar/src/sass/main.scss
+++ b/themes/pulsar/src/sass/main.scss
@@ -4,6 +4,7 @@
 
 // Partials
 @import "partials/base";
+@import "partials/summary.scss";
 @import "partials/header.scss";
 @import "partials/footer.scss";
 @import "partials/buttons.scss";
