--- a/themes/pulsar/layouts/partials/hero.html
+++ b/themes/pulsar/layouts/partials/hero.html
@@ -5,10 +5,10 @@
                 {{ with .Site.Params.hero }}
                 <div class="hero-wrapper">
                     <div class="divider"></div>
-                    <h1 class="hero-title">> Olivier<strong>_</strong>Chemla</h1>
+                    <h1 class="hero-title"><span>Olivier</span><strong>_</strong>Chemla</h1>
                     <h3 class="hero-subtitle"> { Front-End Developper & Designer }</h3>
                     <div class="hero-footer text-right">
-                        <a href="#section-skills" class="btn btn-outline-light">Découvrir <i class="fas fa-arrow-alt-circle-down ml-2"></i></a>
+                        <a href="#" class="btn btn-outline-light" onclick="smoothScrolling()">Découvrir <i class="fas fa-arrow-alt-circle-down ml-2"></i></a>
                     </div>
                 </div>
             </div>
