--- a/themes/pulsar/layouts/partials/summary.html
+++ b/themes/pulsar/layouts/partials/summary.html
@@ -1,4 +1,4 @@
-<aside>
+<!-- <aside>
     <div class="summary">
         <div class="summary-title active">
             Introduction
@@ -16,4 +16,7 @@
             Resume
         </div>
     </div>
-</aside>
+</aside> -->
+
+<div class="summary-info"></div>
+
