--- a/themes/pulsar/layouts/partials/career.html
+++ b/themes/pulsar/layouts/partials/career.html
@@ -1,4 +1,4 @@
-<section class="section-carrer" id="section-career">
+<section class="section-career" id="section-career">
     <div class="container">
         <div class="row">
             <div class="col-lg-6">
