--- a/themes/pulsar/layouts/partials/resume.html
+++ b/themes/pulsar/layouts/partials/resume.html
@@ -1,6 +1,6 @@
 <section class="section-resume">
     <div class="container">
-        <h3>Convaincu ?</h3>
-        <a class="btn btn-outline-primary btn-lg" href="">Téléchargez mon CV<i class="fas fa-cloud-download-alt ml-2"></i></a>
+        <h3>Vous êtes Convaincu ?</h3>
+        <a class="btn btn-outline-primary" href="">Téléchargez mon CV<i class="far fa-file-archive ml-2"></i></a>
     </div>
 </section>
