--- a/themes/pulsar/src/sass/modules/_colors.scss
+++ b/themes/pulsar/src/sass/modules/_colors.scss
@@ -16,7 +16,7 @@ $dark-night: #0a0b0b;
 $black: #000000;
 
 // Colors Sheme
-$primary: $yellow-racing;
+$primary: $red-volcano;
 $secondary: $grey;
 $danger: $red-volcano;
 $success: $green-acide;
