--- a/themes/pulsar/src/sass/partials/_hero.scss
+++ b/themes/pulsar/src/sass/partials/_hero.scss
@@ -16,19 +16,21 @@
 }
 
 .hero-title {
-    // -webkit-text-stroke-width: 1px;
-    // -webkit-text-stroke-color: $black;
-    // -webkit-text-fill-color: white;
     font-family: 'Teko';
     font-size: 50pt;
     font-weight: bolder;
     text-transform: uppercase;
-    // letter-spacing: 0.1rem;
     width: 100%;
     background-color: $white;
     color: $night;
     padding: 0.5rem 1rem;
 
+    span {
+        // -webkit-text-stroke: 0.1px;
+        // -webkit-text-stroke-color: $night;
+        // -webkit-text-fill-color: $white;
+        color: $night;
+    }
     strong {
         color: $primary;
         font-weight: bolder;
@@ -66,17 +68,15 @@
 .hero-console {
     background-color: $black;
     border: 1px solid rgba($white, 0.2);
-    font-size: 10pt;
+    font-size: 11pt;
     font-family: 'Ubuntu Mono';
-    font-weight: 500;
+    font-weight: 300;
     height: 100%;
     transition: 0.3s;
 }
 
 .hero-console:hover {
     border: 1px solid rgba($primary, 1);
-    transform: scale(1.2);
-    font-size: 12pt;
 }
 
 .hero-console-header {
@@ -104,6 +104,7 @@
     padding: 1rem;
     font-weight: lighter;
     line-height: 1.4rem;
+    transition: 0.3s;
 }
 
 
