--- a/themes/pulsar/src/sass/partials/_summary.scss
+++ b/themes/pulsar/src/sass/partials/_summary.scss
@@ -15,3 +15,17 @@
         color: $white;
     }
 }
+
+.summary-info{
+    position: fixed;
+    bottom: 500px;
+    left: 0px;
+    background-color: $white;
+    font-family: 'Ubuntu Mono';
+    color: $primary;
+    font-size: 12pt;
+    z-index: 30;
+    padding: 0.5rem 0.5rem;
+    width: 100px;
+    font-weight: bolder;
+}
