--- a/themes/pulsar/layouts/index.html
+++ b/themes/pulsar/layouts/index.html
@@ -1,8 +1,9 @@
 {{ define "main" }}
-{{ partial "summary" . }}
+NIKE TA RACE MATTEO...
+<!-- {{ partial "summary" . }}
 {{ partial "hero" . }}
 {{ partial "skills" . }}
 {{ partial "career" . }}
 {{ partial "projects" . }}
-{{ partial "resume" . }}
+{{ partial "resume" . }} -->
 {{ end }}
