--- a/themes/pulsar/layouts/partials/hero.html
+++ b/themes/pulsar/layouts/partials/hero.html
@@ -8,7 +8,7 @@
                     <h1 class="hero-title"><span>Olivier</span><strong>_</strong>Chemla</h1>
                     <h3 class="hero-subtitle"> { Front-End Developper & Designer }</h3>
                     <div class="hero-footer text-right">
-                        <a href="#" class="btn btn-outline-light" onclick="smoothScrolling()">Découvrir <i class="fas fa-arrow-alt-circle-down ml-2"></i></a>
+                        <button class="btn btn-outline-light" onclick="smoothScrolling()">Découvrir <i class="fas fa-arrow-alt-circle-down ml-2"></i></button>
                     </div>
                 </div>
             </div>
