--- a/themes/pulsar/src/sass/partials/_card.scss
+++ b/themes/pulsar/src/sass/partials/_card.scss
@@ -23,6 +23,6 @@
 
 .card-title {
     color: $primary;
-    text-transform: uppercase;
+    text-transform: capitalize;
     font-weight: bolder;
 }
