--- a/themes/pulsar/layouts/index.html
+++ b/themes/pulsar/layouts/index.html
@@ -1,9 +1,7 @@
 {{ define "main" }}
-NIKE TA RACE MATTEO...
-<!-- {{ partial "summary" . }}
 {{ partial "hero" . }}
 {{ partial "skills" . }}
 {{ partial "career" . }}
 {{ partial "projects" . }}
-{{ partial "resume" . }} -->
+{{ partial "resume" . }}
 {{ end }}
