--- a/themes/pulsar/layouts/partials/head.html
+++ b/themes/pulsar/layouts/partials/head.html
@@ -15,5 +15,5 @@
     {{/* Minified CSS */}}
     <link rel="stylesheet" type="text/css" media="screen" href="{{"css/main.minified.css" | relURL}}" />
     {{/* Google Font & Fonts */}}
-    <link href="https://fonts.googleapis.com/css?family=Teko|Rubik|Ubuntu+Mono" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Teko|Ubuntu|Ubuntu+Mono" rel="stylesheet">
 </head>
