--- a/themes/pulsar/layouts/partials/summary.html
+++ b/themes/pulsar/layouts/partials/summary.html
@@ -1,22 +1,8 @@
-<!-- <aside>
-    <div class="summary">
-        <div class="summary-title active">
-            Introduction
-        </div>
-        <div class="summary-title">
-            Benchmarks
-        </div>
-        <div class="summary-title">
-            Experiences
-        </div>
-        <div class="summary-title">
-            Projects
-        </div>
-        <div class="summary-title">
-            Resume
-        </div>
-    </div>
-</aside> -->
-
-<div class="summary-info"></div>
+<ul class="summary">
+    <li class="summary-item">Introduction</li>
+    <li class="summary-item">Compétences</li>
+    <li class="summary-item active">Expèriences</li>
+    <li class="summary-item">Projets</li>
+    <li class="summary-item">Resume</li>
+</ul>
 
