--- a/themes/pulsar/src/sass/modules/_colors.scss
+++ b/themes/pulsar/src/sass/modules/_colors.scss
@@ -7,6 +7,7 @@ $green-chewing: #22d1ab;
 $red-volcano: #f44336;
 $pink-lady: #e91e63;
 $yellow-racing: #e49008;
+$yellow-banana: #96e01f;
 $white: #fff;
 $ton-daron: #331b0d;
 $grey: #202020;
@@ -16,7 +17,7 @@ $dark-night: #0a0b0b;
 $black: #000000;
 
 // Colors Sheme
-$primary: $blue-light;
+$primary: $yellow-racing;
 $secondary: $grey;
 $danger: $red-volcano;
 $success: $green-acide;
