--- a/themes/pulsar/src/sass/partials/_sections.scss
+++ b/themes/pulsar/src/sass/partials/_sections.scss
@@ -17,7 +17,7 @@ section {
     h4 {
         font-weight: bolder;
         text-transform: uppercase;
-        border-bottom: 1px solid $white;
+        border-bottom: 2px dashed $white;
         padding: 1rem 0rem;
         color: $white;
         margin: 3rem 0rem;
