--- a/themes/pulsar/layouts/projects/list.html
+++ b/themes/pulsar/layouts/projects/list.html
@@ -1,70 +1,39 @@
 {{ define "main" }}
 <main class="section-projects">
-<div class="container">
-        <div class="card-columns">
-                <div class="card">
-                  <img src="https://images.unsplash.com/photo-1549871306-587d56d36b2d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title that wraps to a new line</h5>
-                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  </div>
-                </div>
-                <div class="card p-3">
-                  <blockquote class="blockquote mb-0 card-body">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-                    <footer class="blockquote-footer">
-                      <small class="text-muted">
-                        Someone famous in <cite title="Source Title">Source Title</cite>
-                      </small>
-                    </footer>
-                  </blockquote>
-                </div>
-                <div class="card">
-                  <img src="https://images.unsplash.com/photo-1549871306-587d56d36b2d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                  </div>
-                </div>
-                <div class="card bg-primary text-white text-center p-3">
-                  <blockquote class="blockquote mb-0">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat.</p>
-                    <footer class="blockquote-footer text-white">
-                      <small>
-                        Someone famous in <cite title="Source Title">Source Title</cite>
-                      </small>
-                    </footer>
-                  </blockquote>
-                </div>
-                <div class="card text-center">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This card has a regular title and short paragraphy of text below it.</p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                  </div>
-                </div>
-                <div class="card">
-                  <img src="https://images.unsplash.com/photo-1549871306-587d56d36b2d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80" class="card-img-top" alt="...">
-                </div>
-                <div class="card p-3 text-right">
-                  <blockquote class="blockquote mb-0">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-                    <footer class="blockquote-footer">
-                      <small class="text-muted">
-                        Someone famous in <cite title="Source Title">Source Title</cite>
-                      </small>
-                    </footer>
-                  </blockquote>
-                </div>
-                <div class="card">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is another card with title and supporting text below. This card has some additional content to make it slightly taller overall.</p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                  </div>
+  <div class="wrapper">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6">
+          <div class="section-header">
+            <h3 class="section-title-outline mb-3">{{ .Title }}<strong>_</strong></h3>
+            {{ with .Params.tags }}
+            {{ range . }}
+            <span class="badge badge-primary" href="{{ "tags" | absURL }}{{ . | urlize }}">{{ . }}</span>
+            {{ end }}
+            {{ end }}
+          </div>
+          {{ range first 3 (where .Pages.ByPublishDate.Reverse "Section" "projects") }}
+          <a href="{{ .Permalink }}">
+            <div class="card mb-3">
+              <div class="card-body">
+                <h5 class="card-title">{{ .Title}}</h5>
+                {{ with .Params.tags }}
+                {{ range . }}
+                <span class="badge badge-primary" href="{{ "tags" | absURL }}{{ . | urlize }}">{{ . }}</span>
+                {{ end }}
+                {{ end }}
+                <div class="card-text">
+                  {{ .Summary | truncate 100 }}
                 </div>
               </div>
-</div>
+            </div>
+          </a>
+          {{ end }}
+        </div>
+        <div class="col-lg-6">
+          <div class="project-single-img" src="" alt=""></div>
+        </div>
+      </div>
+    </div>
 </main>
 {{ end }}
