--- a/themes/pulsar/layouts/partials/career.html
+++ b/themes/pulsar/layouts/partials/career.html
@@ -4,7 +4,7 @@
             <div class="col-lg-6">
                 <div class="section-header">
                     <h3 class="section-title">// Formations<strong>_</strong>Expériences</h3>
-                    <p class="section-subtitle-light">Vous trouverez mes compétences ci dessous</p>
+                    <p class="section-subtitle-light">Mon parcours supérieur et professionnel</p>
                 </div>
             </div>
             <div class="col-lg-6">
