--- a/themes/pulsar/layouts/projects/list.html
+++ b/themes/pulsar/layouts/projects/list.html
@@ -12,8 +12,8 @@
             {{ end }}
             {{ end }}
           </div>
-          {{ range first 3 (where .Pages.ByPublishDate.Reverse "Section" "projects") }}
-          <a href="{{ .Permalink }}">
+          {{ range first 4 (where .Pages.ByPublishDate.Reverse "Section" "projects") }}
+          <a href="{{ .Permalink }}" onmouseover="showMe()">
             <div class="card mb-3">
               <div class="card-body">
                 <h5 class="card-title">{{ .Title}}</h5>
@@ -25,13 +25,40 @@
                 <div class="card-text">
                   {{ .Summary | truncate 100 }}
                 </div>
+                <div class="card-hide">
+                  {{ with .Params.featured_image }}
+                  <span id="hidden-link" src="" alt="">{{ . | urlize }}</span>
+                  {{ end }}
+                </div>
               </div>
             </div>
           </a>
           {{ end }}
         </div>
         <div class="col-lg-6">
-          <div class="project-single-img" src="" alt=""></div>
+          <div class="project-single-img mb-3" src="" alt=""></div>
+          {{ range after 4 (where .Pages.ByPublishDate.Reverse "Section" "projects") }}
+          <a href="{{ .Permalink }}" onmouseover="showMe()">
+            <div class="card mb-3">
+              <div class="card-body">
+                <h5 class="card-title">{{ .Title}}</h5>
+                {{ with .Params.tags }}
+                {{ range . }}
+                <span class="badge badge-primary" href="{{ "tags" | absURL }}{{ . | urlize }}">{{ . }}</span>
+                {{ end }}
+                {{ end }}
+                <div class="card-text">
+                  {{ .Summary | truncate 100 }}
+                </div>
+                <div class="card-hide">
+                  {{ with .Params.featured_image }}
+                  <span id="hidden-link" src="" alt="">{{ . | urlize }}</span>
+                  {{ end }}
+                </div>
+              </div>
+            </div>
+          </a>
+          {{ end }}
         </div>
       </div>
     </div>
