--- a/themes/pulsar/src/sass/partials/_base.scss
+++ b/themes/pulsar/src/sass/partials/_base.scss
@@ -14,6 +14,10 @@ body {
 .wrapper {
     flex-grow: 1;
     min-height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: $background;
 }
 
 // TEMPOORARY
