--- a/themes/pulsar/layouts/partials/head.html
+++ b/themes/pulsar/layouts/partials/head.html
@@ -3,7 +3,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>{{ .Site.Title }} | {{ .Site.Author.name }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="{{ "favicon.ico" | absURL }}" type="image/x-icon">
+    <link rel="shortcut icon" href="{{ "favicon.png" | absURL }}" type="image/x-icon">
     {{/* Bootstrap */}}
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
         crossorigin="anonymous">
@@ -13,7 +13,7 @@
     {{/* Animated.css */}}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     {{/* Minified CSS */}}
-    <link rel="stylesheet" type="text/css" media="screen" href="{{"css/main.minified.css" | relURL}}" />
+    <link rel="stylesheet" id="pagestyle" type="text/css" media="screen" href="{{"css/main_blue.minified.css" | relURL}}" />
     {{/* Google Font & Fonts */}}
     <link href="https://fonts.googleapis.com/css?family=Teko|Ubuntu|Ubuntu+Mono" rel="stylesheet">
 </head>
