--- a/themes/pulsar/src/sass/modules/_colors.scss
+++ b/themes/pulsar/src/sass/modules/_colors.scss
@@ -2,7 +2,7 @@
 $blue-electric: #304ffe;
 $blue-light: #0081fa;
 $purple-spectre: #651fff;
-$green-acide: #00e676;
+$green-acide: #00ca68;
 $green-chewing: #22d1ab;
 $red-volcano: #f44336;
 $pink-lady: #e91e63;
@@ -17,7 +17,7 @@ $dark-night: #0a0b0b;
 $black: #000000;
 
 // Colors Sheme
-$primary: $red-volcano;
+$primary: $blue-electric;
 $secondary: $grey;
 $danger: $red-volcano;
 $success: $green-acide;
