--- a/themes/pulsar/src/sass/partials/_card.scss
+++ b/themes/pulsar/src/sass/partials/_card.scss
@@ -47,7 +47,9 @@
 .card-hide{
     display: none;
 }
-
+#hidden-link {
+    display: none;
+}
 .badge-primary {
     background-color: $primary;
     border-radius: inherit;
