--- a/themes/pulsar/layouts/partials/skills.html
+++ b/themes/pulsar/layouts/partials/skills.html
@@ -14,7 +14,7 @@
             {{ end }}
         </div>
 
-        <button class="btn btn-primary btn-sm mb-3" onclick="setProgress()" id="start-benchmark">Start
+        <button class="btn btn-primary  mb-3" onclick="setProgress()" id="start-benchmark">Start
             Benchmark<i class="fas fa-play-circle ml-2"></i></button>
 
         <div class="row">
