--- a/themes/pulsar/src/sass/partials/_header.scss
+++ b/themes/pulsar/src/sass/partials/_header.scss
@@ -1,7 +1,7 @@
 header {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
-  border-bottom: 1px solid rgba($primary, 1);
+  border-bottom: 1px solid rgba($white, 0.1);
   box-shadow: 0px 10px 10px rgba($color: $black, $alpha: 0.2);
   font-weight: 500;
   color: white;
