--- a/themes/pulsar/layouts/partials/head.html
+++ b/themes/pulsar/layouts/partials/head.html
@@ -13,7 +13,7 @@
     {{/* Animated.css */}}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     {{/* Minified CSS */}}
-    <link rel="stylesheet" id="pagestyle" type="text/css" media="screen" href="{{"css/main_blue.minified.css" | relURL}}" />
+    <link rel="stylesheet" id="pagestyle" type="text/css" media="screen" href="{{"css/main_purple.minified.css" | relURL}}" />
     {{/* Google Font & Fonts */}}
     <link href="https://fonts.googleapis.com/css?family=Teko|Ubuntu|Ubuntu+Mono" rel="stylesheet">
 </head>
